sandc/test/fixtures/pbtRegression/shouldSucceed/qualifiedPackageItems/Foo.sand
package foo;

pub class Foo {
    t: bar.Bar?;
}