sandc/test/fixtures/pbtRegression/shouldFail/implicitShadowStaticMethodCopy/Foo.sand
pub class Foo {
    copy sand.lang.String;
}